** Fixed ** button z-index and page load record list.

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -162,6 +162,7 @@ body
 		text-align: center
 		margin: 4px auto
 		letter-spacing: .3em
+		z-index: 5000
 		&:hover, :focus
 			color: #fff
 	.gtg-navback
